--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -60,7 +60,12 @@ p {
 
 .bg-dark {
     color: white;
-    background-color: $gray-darker !important;
+    background-color: $dark-base !important;
+    z-index: 10;
+}
+.bg-blue {
+    color: $gray-lighter;
+    background-color: $dark-base !important;
     z-index: 10;
 }
 
