--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,9 @@
 $theme-color-1:    #F78000;
 $theme-color-2:    #FECC00;
 
+
+$dark-base:        #222222 !default;
+
 $gray-base:        #42434e !default;
 $gray-darker:	   lighten($gray-base, 13.5%) !default; // #222
 $gray-dark:	   lighten($gray-base, 20%) !default;   // #333
