--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,6 +7,7 @@ $theme-color-2:    #FECC00;
 
 
 $dark-base:        #222222 !default;
+$light:             #FEFEFE;
 
 $gray-base:        #42434e !default;
 $gray-darker:	   lighten($gray-base, 13.5%) !default; // #222
