Modified mail header

--- a/scss/_venue.scss
+++ b/scss/_venue.scss
@@ -1,5 +1,5 @@
 #venue {
-  background-image: url(../img/lecture-hall-dark.jpg);
+  background-image: url(../img/salle_dark.jpg);
   background-repeat: no-repeat; 
   background-size: cover;
   background-position: center;
