--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ header.masthead {
   background-size: cover;
   background-position: center; }
 
-.google-maps {
+#google-maps {
   position: relative;
   padding-bottom: 100%;
   height: 0;
@@ -268,15 +268,8 @@ header.masthead {
   max-height: 450px;
   margin: 0 auto; }
   @media (min-width: 768px) {
-    .google-maps {
+    #google-maps {
       padding-bottom: 40%; } }
-
-.google-maps iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100% !important;
-  height: 100% !important; }
 
 #confirmed-speakers {
   padding-left: 0; }
