--- a/scss/_venue.scss
+++ b/scss/_venue.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   background-position: center;
 }
-.google-maps {
+#google-maps {
     position: relative;
     padding-bottom: 100%; // This is the aspect ratio
     height: 0;
@@ -15,11 +15,4 @@
     @media (min-width: 768px) {
       padding-bottom: 40%;
     }
-}
-.google-maps iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100% !important;
-    height: 100% !important;
 }
