--- a/scss/_speakers.scss
+++ b/scss/_speakers.scss
@@ -22,7 +22,7 @@
       display: block;
     }
     .role {
-      display: block;
+      display: none;
       font-size: 0.9em;
       margin-bottom: 2px;
     }
