--- a/css/style.css
+++ b/css/style.css
@@ -554,3 +554,15 @@ header.masthead {
     display: none; }
   #hero-mobile {
     display: block; } }
+
+.tito-tickets-button {
+  color: white !important;
+  border-color: #F78000;
+  background-color: #F78000;
+  padding: 15px 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 0px;
+  font-family: 'Helvetica Neue', 'Open Sans', Arial, sans-serif;
+  cursor: pointer; }
