--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer-bottom {
-    background-color: shade($gray-darker, 10%) !important;
+    background-color: #222222 !important;
     min-height: 30px;
     width: 100%;
 }
