--- a/scss/_sponsors.scss
+++ b/scss/_sponsors.scss
@@ -1,7 +1,16 @@
+#sponsors
+{
+  padding-bottom:0;
+}
+
 .chainsmiths {
   display: inline-block;
   max-width: 80%;
   img {
     max-width: 80%;
   }
+}
+
+.separator {
+  margin-bottom:40px;
 }
