--- a/scss/_sponsors.scss
+++ b/scss/_sponsors.scss
@@ -1,6 +1,5 @@
 #sponsors
 {
-  padding-bottom:0;
 }
 
 .chainsmiths {
@@ -9,8 +8,12 @@
   img {
     max-width: 80%;
   }
+
 }
 
 .separator {
-  margin-bottom:40px;
+  margin-bottom:20px;
+}
+.padding-top {
+  padding-top:40px;
 }
