--- a/css/style.css
+++ b/css/style.css
@@ -302,9 +302,6 @@ header.masthead {
       font-weight: bold;
       font-size: 0.8em; }
 
-#sponsors {
-  padding-bottom: 0; }
-
 .chainsmiths {
   display: inline-block;
   max-width: 80%; }
@@ -312,7 +309,10 @@ header.masthead {
     max-width: 80%; }
 
 .separator {
-  margin-bottom: 40px; }
+  margin-bottom: 20px; }
+
+.padding-top {
+  padding-top: 40px; }
 
 @font-face {
   font-family: "Source Code Pro";
