some sizing modifications

--- a/scss/_sponsors.scss
+++ b/scss/_sponsors.scss
@@ -17,6 +17,11 @@
     padding-top: 14%;
 }
 
+.breaking-bitcoin{
+  max-width: 30%;
+  padding-top: 15%;
+
+}
 .separator {
   margin-bottom:20px;
 }
