--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,10 @@ header.masthead {
   max-width: 40%;
   padding-top: 14%; }
 
+.breaking-bitcoin {
+  max-width: 30%;
+  padding-top: 15%; }
+
 .separator {
   margin-bottom: 20px; }
 
