--- a/css/style.css
+++ b/css/style.css
@@ -309,8 +309,8 @@ header.masthead {
     max-width: 80%; }
 
 .bhb-network {
-  max-width: 90%;
-}
+  max-width: 40%;
+  padding-top: 14%; }
 
 .breaking-bitcoin {
   max-width: 30%;
